--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "My PWA App",
   "short_name": "MyApp",
-  "start_url": "/",
+  "start_url": "/sec/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
@@ -13,4 +13,5 @@
     }
   ]
 }
+
 
